# tastytrade-mcp-server

./: .env.example  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/: deployment.md
docs/: deployment.md  mcp-client-config.example.json
src/tastytrade_mcp_server/: __init__.py  client.py  config.py  server.py
tests/: test_client.py  test_config.py
