[project]
name = "tastytrade-mcp-server"
version = "0.1.0"
description = "Read-only MCP server for tastytrade brokerage account data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Roy Meshulam" }
]
dependencies = [
  "httpx>=0.27.0",
  "mcp[cli]>=1.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0"
]

[project.scripts]
tastytrade-mcp-server = "tastytrade_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tastytrade_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
